<resources>
    <!--App Name-->
    <string name="app_name">AirportReservation</string>

    <!--Buttons-->
    <string name="create_account_button">Create Account</string>
    <string name="reserve_seat_button">Reserve Seat</string>
    <string name="cancel_reservation_button">Cancel Reservation</string>
    <string name="manage_system_button">Manage System</string>
    <string name="login_button">Log In</string>

    <!--Hint Messages-->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="new_username_hint">New Username</string>
    <string name="new_password_hint">New Password</string>
    <string name="departure_location">Departure Location</string>
    <string name="arrival_location">Arrival Location</string>
    <string name="ticket_amount">Amount of Tickets</string>
    <string name="create_reservation">Create Reservation</string>

    <!--Text Views-->
    <string name="accounts_log">Accounts Log</string>
    <string name="flights_log">Flights Log</string>

</resources>
